--- a/Task11/Task11.css
+++ b/Task11/Task11.css
@@ -10,39 +10,63 @@
 
 header{
 	background: #33cccc;
-	height: 80px;
+	height: 160px;
 	text-align: center;
 	width: 100%;
 }
 
 header span{
-	font-size: 24px;
+	font-size: 36px;
 	color: white;
 	float: left;
-	margin: 20px 0 0 25px;
+	margin: 65px 0 0 25px;
 }
 
 header h1{
 	color: white;
-	padding: 12px;
+	padding: 50px;
+	font-size: 50px;
 }
 
 nav{
 	width: 100%;
-	height: 80px;
+	height: 160px;
 	background: white;
 }
 
 .navbar{
 	display: inline-block;
 	width: 19.5%;
-	height: 80px;
+	height: 160px;
 	text-align: center;
-	padding-top: 25px;
-	font-size: 24px;
+	padding-top: 50px;
+	font-size: 36px;
 }
 
 .part1{
 	width: 100%;
 	height: 550px;
+}
+
+.part2{
+	width: 100%;
+	height: 250px;
+}
+
+.part2 .label{
+	width: 19.5%;
+	height: 250px;
+	display: inline-block;
+}
+
+.part2 .label .icon{
+	width: 150px;
+	height: 150px;
+	margin: 30px;
+	border-radius: 100px;
+	background: #33cccc;
+}
+
+.part2 img{
+	padding: 29px;
 }
