--- a/Task11/Task11.css
+++ b/Task11/Task11.css
@@ -50,13 +50,14 @@ nav{
 
 .part2{
 	width: 100%;
-	height: 250px;
+	height: 270px;
 }
 
 .part2 .label{
 	width: 19.5%;
 	height: 250px;
 	display: inline-block;
+	text-align: center;
 }
 
 .part2 .label .icon{
@@ -69,4 +70,70 @@ nav{
 
 .part2 img{
 	padding: 29px;
+}
+
+.part2 p{
+	font-size: 30px;
+	padding-left: 8px;
+}
+
+.part3{
+	width: 100%;
+	height: 400px;
+}
+
+.part3-cols{
+	display: inline-block;
+	width: 33.0%;
+	height: 400px;
+	text-align: center;
+}
+
+.part3-cols image{
+	margin: 30px 0 0 0; 
+}
+
+.part3-cols h1, .part3-cols h2{
+	padding: 10px;
+}
+
+.part4, .part5{
+	width: 100%;
+	height: 600px;
+}
+
+.part4 hr, .part5 hr, .part6 hr{
+	border: 2px solid #ECECEC;
+}
+
+.part4 h1, .part5 h1{
+	font-weight: normal;
+	font-size: 36px;
+	margin: 20px;
+}
+
+.part4-left, .part5-left{
+	width: 33%;
+	float: left;
+}
+
+.part4-left img, .part5-left img{
+	margin: 10px 20px 10px 30px;
+	border: 2px solid #FEB832;
+}
+
+.part4-right, .part5-right{
+	width: 65%;
+	float: right;
+}
+
+.copywriter{
+	width: 33%;
+	height: 80px;
+	background: #F8F8F8;
+	display: inline-block;
+	margin: 20px 30px;
+	text-align: center;
+	font-size: 24px;
+	line-height: 3em;
 }
