--- a/Task11/Task11.css
+++ b/Task11/Task11.css
@@ -137,3 +137,62 @@ nav{
 	font-size: 24px;
 	line-height: 3em;
 }
+
+.part6{
+	width: 100%;
+	height: 870px;
+}
+
+.part6 img{
+	padding: 20px 10px 20px 10px;
+}
+
+.part6-article1{
+	width: 100%;
+	height: 240px;
+	border-bottom: 2px solid #ECECEC;
+}
+
+.part6-article-left{
+	width: 35%;
+	height: 240px;
+	float: left;
+}
+
+.part6-article-right{
+	width: 65%;
+	height: 240px;
+	float: left;
+}
+
+.part6-article2{
+	clear: all;
+	width: 100%;
+	height: 350px;
+}
+
+.part6 h2{
+	font-size: 22px;
+	font-weight: normal;
+	margin: 20px;
+}
+
+.part6-article1 p{
+	margin-top: 150px;
+	margin-left: 20px;
+}
+
+.part6-article2 p{
+	margin-left: 20px;
+	margin-top: 0px;
+}
+
+footer{
+	width: 100%;
+	height: 50px;
+	background: #33cccc;
+	color: white;
+	text-align: center;
+	font-size: 24px;
+	line-height: 45px;
+}
