--- a/Task11/Task11.css
+++ b/Task11/Task11.css
@@ -172,7 +172,7 @@ nav{
 }
 
 .part6 h2{
-	font-size: 22px;
+	font-size: 32px;
 	font-weight: normal;
 	margin: 20px;
 }
@@ -180,19 +180,21 @@ nav{
 .part6-article1 p{
 	margin-top: 150px;
 	margin-left: 20px;
+	color: #696969;
 }
 
 .part6-article2 p{
 	margin-left: 20px;
 	margin-top: 0px;
+	color: #696969;
 }
 
 footer{
 	width: 100%;
-	height: 50px;
+	height: 100px;
 	background: #33cccc;
 	color: white;
 	text-align: center;
 	font-size: 24px;
-	line-height: 45px;
+	line-height: 100px;
 }
